--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 .wrapper {
   width: 100%;
   margin: 0 auto;
@@ -14,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 2em 1em;
   background-color: wheat;
 }
 .nav__links {
@@ -25,18 +29,49 @@
 }
 .nav__links-mobile {
   position: absolute;
-  padding: 2em;
+  padding: 3em 2em;
   flex-direction: column;
   align-items: center;
-  gap: 1.5em;
-  top: 6em;
-  right: 1.2em;
-  width: min(300px, 85%);
+  top: 8em;
+  right: 1.5em;
+  width: min(300px, 90%);
   background-color: wheat;
 }
+.nav__links-mobile::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -2em;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid red;
+}
 .nav__link {
+  display: block;
+  margin: 0.8em 0;
   text-decoration: none;
-  color: hsl(232, 10%, 55%);
+  color: hsl(213, 9%, 39%);
+  font-size: 2rem;
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+}
+.nav__link:last-child {
+  background-color: hsl(51, 100%, 49%);
+  color: hsl(212, 27%, 19%);
+  text-transform: uppercase;
+  font-family: "Fraunces", sans-serif;
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding: 1em 1.8em;
+  border-radius: 30px;
+  transition: background-color 0.3s;
+}
+.nav__link:last-child:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 .nav__burger-btn {
   padding: 0.5em;
