--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,10 @@
 $fraunces: 'Fraunces', sans-serif;
 $Barlow: 'Barlow', sans-serif;
 
+html {
+    font-size: 62.5%;
+}
+
 .wrapper {
     width: 100%;
     margin: 0 auto;
@@ -20,7 +24,7 @@ $Barlow: 'Barlow', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em;
+    padding: 2em 1em;
     background-color: wheat;
     
         &__links {
@@ -32,20 +36,54 @@ $Barlow: 'Barlow', sans-serif;
         }
         &__links-mobile {
             position: absolute;
-            padding: 2em;
+            padding: 3em 2em;
             flex-direction: column;
             align-items: center;
-            gap: 1.5em;
-            top: 6em;
-            right: 1.2em;
-            width: min(300px, 85%);
+            top: 8em;
+            right: 1.5em;
+            width: min(300px, 90%);
             background-color: wheat;
             // opacity: 0;
             // visibility: hidden;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    right: 0;
+                    top: -2em;
+                    width: 0; 
+                    height: 0; 
+                    border-top: 20px solid transparent;
+                    border-bottom: 20px solid transparent; 
+                    border-right:20px solid red; 
+                }
         }
         &__link {
+            display: block;
+            margin: .8em 0;
             text-decoration: none;
-            color: $lightBlue;
+            color: $darkBlue;
+            font-size: 2rem;
+            font-family: $Barlow;
+            font-weight: 600;
+            
+
+                &:last-child {
+                    background-color: $yellowHover;
+                    color: $veryDarkBlue;
+                    text-transform: uppercase;
+                    font-family: $fraunces;
+                    font-weight: 700;
+                    font-size: 1.5rem;
+                    padding: 1em 1.8em;
+                    border-radius: 30px;
+                    transition: background-color .3s;
+
+                        &:hover {
+                            background-color: rgba(255, 255, 255, .5);
+                            backdrop-filter: blur(10px);
+                        }
+                }
         }
         &__burger-btn {
             padding: .5em;
