--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,11 +21,13 @@ html {
 }
 
 .nav {
+    width: 100%;
+    position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2em 1em;
-    background-color: wheat;
+    z-index: 100;
     
         &__links {
             display: flex;
@@ -42,9 +44,17 @@ html {
             top: 8em;
             right: 1.5em;
             width: min(300px, 90%);
-            background-color: wheat;
-            // opacity: 0;
-            // visibility: hidden;
+            background-color: $pureWhite;
+            transform: scale(.7);
+            opacity: 0;
+            visibility: hidden;
+            transition: transform .2s cubic-bezier(0.25, 0.1, 0.12, 1.73), opacity .2s, visibility .2s;
+
+                &--opened {
+                    opacity: 1;
+                    visibility: visible;
+                    transform: scale(1);
+                }
 
                 &::before {
                     content: '';
@@ -55,7 +65,7 @@ html {
                     height: 0; 
                     border-top: 20px solid transparent;
                     border-bottom: 20px solid transparent; 
-                    border-right:20px solid red; 
+                    border-right:20px solid $pureWhite; 
                 }
         }
         &__link {
@@ -80,8 +90,7 @@ html {
                     transition: background-color .3s;
 
                         &:hover {
-                            background-color: rgba(255, 255, 255, .5);
-                            backdrop-filter: blur(10px);
+                            background-color: hsl(51, 82%, 54%);
                         }
                 }
         }
@@ -90,6 +99,71 @@ html {
             border: none;
             background: none;
             cursor: pointer;
+            transition: opacity .3s;
+
+                &--active {
+                    opacity: 0.7;
+                }
         }
 }
 
+
+// HEADER 
+
+.header {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 75vh;
+    padding: 2em;
+    background-image: url('../images/mobile/image-header.jpg');
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+
+    &__title {
+        margin-block-start: 3em;
+        text-align: center;
+        font-family: $fraunces;
+        font-size: 3rem;
+        letter-spacing: 5px;
+        text-transform: uppercase;
+        font-weight: 900;
+        color: $pureWhite;
+    }
+    &__arrow {
+        position: absolute;
+        bottom: 8em;
+    }
+
+}
+
+
+// IMAGES SECTION
+
+.images {
+    .desktop-visible {
+        display: none;
+    }
+    &__img-yellow {
+        width: 100%;
+    }
+
+}
+
+
+
+
+
+@media(375px <= width) {
+    .header {
+        &__arrow {
+            bottom: 12em;
+        }
+        &__title {
+            margin-block-start: 4em;
+            font-size: 3.5rem;
+        }
+    }
+}
