--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html {
   transform: scale(0.7);
   opacity: 0;
   visibility: hidden;
+  transform-origin: right;
   transition: transform 0.2s cubic-bezier(0.25, 0.1, 0.12, 1.73), opacity 0.2s, visibility 0.2s;
 }
 .nav__links-mobile--opened {
@@ -120,11 +121,80 @@ html {
   bottom: 8em;
 }
 
+.images {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+  text-align: center;
+}
 .images .desktop-visible {
   display: none;
 }
-.images__img-yellow {
+.images__img {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.images__img-yellow {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.images__yellow-info {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  padding: 4em;
+}
+.images__title {
+  font-size: 2.5rem;
+  font-family: "Fraunces", sans-serif;
+  color: hsl(212, 27%, 19%);
+  font-weight: 900;
+}
+.images__text {
+  margin: 1.5em 0 2em;
+  font-size: 1.5rem;
+  color: hsl(232, 10%, 55%);
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  line-height: 25px;
+}
+.images__link {
+  position: relative;
+  display: block;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 1.3rem;
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  text-decoration: none;
+  color: hsl(212, 27%, 19%);
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  z-index: 0;
+}
+.images__link::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 7px;
+  border-radius: 30px;
+  z-index: -1;
+}
+.images__link--yellow::before {
+  background-color: hsla(51, 100%, 49%, 0.271);
+}
+.images__link--pink::before {
+  background-color: hsla(7, 99%, 70%, 0.271);
+}
+.images__pink-info {
+  grid-column: 1/2;
+  grid-row: 4/5;
+  padding: 4em;
 }
 
 @media (375px <= width) {
