--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,7 @@ html {
             transform: scale(.7);
             opacity: 0;
             visibility: hidden;
+            transform-origin: right;
             transition: transform .2s cubic-bezier(0.25, 0.1, 0.12, 1.73), opacity .2s, visibility .2s;
 
                 &--opened {
@@ -143,12 +144,89 @@ html {
 // IMAGES SECTION
 
 .images {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+    text-align: center;
+    
+
     .desktop-visible {
         display: none;
     }
-    &__img-yellow {
+    &__img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
+    &__img-yellow {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    &__yellow-info {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        padding: 4em;
+    }
+    &__title {
+        font-size: 2.5rem;
+        font-family: $fraunces;
+        color: $veryDarkBlue;
+        font-weight: 900;
+    }
+    &__text {
+        margin: 1.5em 0 2em;
+        font-size: 1.5rem;
+        color: $lightBlue;
+        font-family: $Barlow;
+        font-weight: 500;
+        line-height: 25px;
+    }
+    &__link {
+        position: relative;
+        display: block;
+        width: fit-content;
+        margin: 0 auto;
+        font-size: 1.3rem;
+        font-family: $fraunces;
+        font-weight: 900;
+        text-decoration: none;
+        color: $veryDarkBlue;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        z-index: 0;
+
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 7px;
+                border-radius: 30px;
+                z-index: -1;
+            }
+            &--yellow::before {
+                background-color: hsla(51, 100%, 49%, 0.271);
+            }
+            &--pink::before {
+                background-color: hsl(7, 99%, 70%, 0.271);
+            }
+    }
+
+    &__pink-info {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+        padding: 4em;
+    }
+
+
+    // &__img-green {
+    //     background-image: url('../images/mobile/image-graphic-design.jpg');
+    //     background-size: cover;
+    //     background-position: center;
+    //     grid-column: 1 / 2;
+    //     grid-row: 5 / 7;
+    // }
 
 }
 
