--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,30 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 .wrapper {
   width: 100%;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1400px;
+}
+
+img {
+  display: block;
+  font-style: italic;
 }
 
 .nav {
   width: 100%;
   position: absolute;
+  padding: 2em;
+  z-index: 100;
+}
+.nav .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2em 1em;
-  z-index: 100;
 }
 .nav__links {
   display: flex;
@@ -42,6 +50,7 @@ html {
   opacity: 0;
   visibility: hidden;
   transform-origin: right;
+  box-shadow: 5px 5px 10px rgba(46, 46, 46, 0.1803921569);
   transition: transform 0.2s cubic-bezier(0.25, 0.1, 0.12, 1.73), opacity 0.2s, visibility 0.2s;
 }
 .nav__links-mobile--opened {
@@ -60,7 +69,11 @@ html {
   border-bottom: 20px solid transparent;
   border-right: 20px solid hsl(0, 0%, 100%);
 }
+.nav__logo {
+  text-decoration: none;
+}
 .nav__link {
+  position: relative;
   display: block;
   margin: 0.8em 0;
   text-decoration: none;
@@ -68,6 +81,25 @@ html {
   font-size: 2rem;
   font-family: "Barlow", sans-serif;
   font-weight: 600;
+  z-index: 0;
+}
+.nav__link::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  border-radius: 30px;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transform-origin: right;
+  background-color: hsl(51, 100%, 49%);
+  transition: transform 0.3s;
+  z-index: -1;
+}
+.nav__link:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 .nav__link:last-child {
   background-color: hsl(51, 100%, 49%);
@@ -83,6 +115,9 @@ html {
 .nav__link:last-child:hover {
   background-color: hsl(51, 82%, 54%);
 }
+.nav__link:last-child::before {
+  display: none;
+}
 .nav__burger-btn {
   padding: 0.5em;
   border: none;
@@ -93,21 +128,24 @@ html {
 .nav__burger-btn--active {
   opacity: 0.7;
 }
+.nav__burger-btn img {
+  width: 30px;
+}
 
 .header {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   height: 75vh;
-  padding: 2em;
+  padding: 5em;
   background-image: url("../images/mobile/image-header.jpg");
   background-position: center;
   background-size: cover;
   overflow: hidden;
 }
 .header__title {
-  margin-block-start: 3em;
   text-align: center;
   font-family: "Fraunces", sans-serif;
   font-size: 3rem;
@@ -116,9 +154,12 @@ html {
   font-weight: 900;
   color: hsl(0, 0%, 100%);
 }
+.header a {
+  text-decoration: none;
+  padding: 0 2em;
+}
 .header__arrow {
-  position: absolute;
-  bottom: 8em;
+  margin-block-start: 4em;
 }
 
 .images {
@@ -126,6 +167,10 @@ html {
   grid-template-columns: 1fr;
   grid-template-rows: repeat(8, 1fr);
   text-align: center;
+  overflow: hidden;
+}
+.images__wrapper {
+  max-width: 1600px;
 }
 .images .desktop-visible {
   display: none;
@@ -143,6 +188,9 @@ html {
   grid-row: 1/2;
 }
 .images__yellow-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   grid-column: 1/2;
   grid-row: 2/3;
   padding: 4em;
@@ -184,25 +232,378 @@ html {
   height: 7px;
   border-radius: 30px;
   z-index: -1;
+  transition: background-color 0.3s;
 }
 .images__link--yellow::before {
   background-color: hsla(51, 100%, 49%, 0.271);
+}
+.images__link--yellow:hover::before {
+  background-color: hsl(51, 100%, 49%);
+}
+.images__link--pink:hover::before {
+  background-color: hsl(7, 99%, 70%);
 }
 .images__link--pink::before {
   background-color: hsla(7, 99%, 70%, 0.271);
 }
 .images__pink-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   grid-column: 1/2;
   grid-row: 4/5;
   padding: 4em;
 }
+.images__img-green {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-image: url("../images/mobile/image-graphic-design.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-column: 1/2;
+  grid-row: 5/7;
+}
+.images__subtitle {
+  font-family: "Fraunces", sans-serif;
+  font-size: 2.4rem;
+  color: hsl(167, 40%, 24%);
+  font-weight: 900;
+  text-transform: capitalize;
+  margin-block-end: 1em;
+}
+.images__subtext {
+  margin-block-end: 4em;
+  font-family: "Barlow", sans-serif;
+  font-size: 1.5rem;
+  color: hsl(167, 40%, 24%);
+  font-weight: 600;
+  line-height: 25px;
+}
+.images__img-blue {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 2em;
+  background-image: url("../images/mobile/image-photography.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-column: 1/2;
+  grid-row: 7/9;
+}
+.images__subtitle, .images__subtext {
+  color: hsl(198, 62%, 26%);
+}
 
-@media (375px <= width) {
-  .header__arrow {
-    bottom: 12em;
+.testimonials {
+  padding: 6em 2em;
+}
+.testimonials__title {
+  text-align: center;
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  font-family: "Fraunces", sans-serif;
+  letter-spacing: 3px;
+  color: hsl(232, 10%, 55%);
+  font-weight: 700;
+}
+.testimonials__box {
+  margin-block-start: 5em;
+}
+.testimonials__card {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em;
+  margin: 3em 0;
+  font-family: "Barlow", sans-serif;
+}
+.testimonials__img {
+  width: 70px;
+  border-radius: 50%;
+}
+.testimonials__text {
+  margin: 2em 0 1.5em;
+  font-size: 1.7rem;
+  line-height: 25px;
+  color: hsl(213, 9%, 39%);
+  font-weight: 600;
+}
+.testimonials__name {
+  display: block;
+  margin-block-end: 0.5em;
+  font-size: 1.7rem;
+  font-weight: 900;
+  font-family: "Fraunces", sans-serif;
+}
+.testimonials__info-subtitle {
+  font-size: 1.3rem;
+  color: hsl(232, 10%, 55%);
+  font-weight: 500;
+}
+
+@media (400px >= height) {
+  .header {
+    height: 150vh;
+  }
+}
+@media (576px <= width) {
+  .nav__burger-btn {
+    display: none;
+  }
+  .nav__links-desktop {
+    display: flex;
+    align-items: center;
+  }
+  .nav__links-mobile {
+    display: none;
+  }
+  .nav__link {
+    margin: 0 1em;
+    color: hsl(0, 0%, 100%);
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
+  .nav__link:last-child {
+    background-color: hsl(0, 0%, 100%);
+    font-size: 1.2rem;
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+    text-shadow: 2px 2px 3px transparent;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  .nav__link:last-child:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: hsl(0, 0%, 100%);
+    text-shadow: 2px 2px 3px rgba(46, 46, 46, 0.1803921569);
   }
   .header__title {
-    margin-block-start: 4em;
     font-size: 3.5rem;
+  }
+  .header__arrow {
+    margin-block-start: 6em;
+  }
+  .images {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .images__title {
+    font-size: 3rem;
+  }
+  .images__text {
+    font-size: 1.7rem;
+  }
+  .images__link {
+    font-size: 1.5rem;
+  }
+  .images__subtitle {
+    font-size: 2.8rem;
+  }
+  .images__subtext {
+    font-size: 1.7rem;
+  }
+  .images__img-yellow {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .images__yellow-info {
+    text-align: left;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .images__link {
+    margin: 0;
+  }
+  .images__img-pink {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .images__pink-info {
+    text-align: left;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .images__img-green {
+    padding: 3em 2em;
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .images__img-blue {
+    padding: 3em 2em;
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+  .images__subtitle {
+    margin-block-start: 2em;
+  }
+  .images__subtext {
+    margin: 0;
+  }
+  .testimonials {
+    padding: 8em 2em;
+  }
+  .testimonials__title {
+    font-size: 1.9rem;
+  }
+  .testimonials__box {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .testimonials__card {
+    width: 50%;
+  }
+  .testimonials__card:last-child {
+    margin: 0;
+  }
+  .testimonials__card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+@media (700px <= width) {
+  .header {
+    background-image: url("../images/desktop/image-header.jpg");
+  }
+  .header__title {
+    font-size: 3.8rem;
+    letter-spacing: 7px;
+  }
+  .header__arrow {
+    margin-block-end: 6em;
+  }
+}
+@media (768px <= width) {
+  .testimonials {
+    padding: 10em 2em;
+  }
+  .testimonials__title {
+    font-size: 2.1rem;
+  }
+  .testimonials__img {
+    width: 80px;
+  }
+  .testimonials__text {
+    font-size: 1.8rem;
+  }
+  .testimonials__name {
+    font-size: 1.9rem;
+  }
+  .testimonials__info-subtitle {
+    font-size: 1.5rem;
+  }
+}
+@media (992px <= width) {
+  .nav {
+    padding: 4em;
+  }
+  .nav__link {
+    font-size: 1.8rem;
+  }
+  .nav__link:last-child {
+    font-size: 1.5rem;
+  }
+  .nav__logo-img {
+    width: 150px;
+  }
+  .header {
+    height: 100vh;
+  }
+  .header__title {
+    font-size: 4.4rem;
+    letter-spacing: 10px;
+  }
+  .header__arrow {
+    margin-block-end: 10em;
+  }
+  .images .mobile-visible {
+    display: none;
+  }
+  .images .desktop-visible {
+    display: block;
+  }
+  .images__title {
+    font-size: 3.8rem;
+  }
+  .images__text {
+    font-size: 1.8rem;
+    line-height: 27px;
+  }
+  .images__yellow-info {
+    padding: 6em;
+  }
+  .images__pink-info {
+    padding: 6em;
+  }
+  .images__link {
+    font-size: 1.8rem;
+  }
+  .images__img-green {
+    padding: 3em 6em 6em;
+    background-image: url("../images/desktop/image-graphic-design.jpg");
+  }
+  .images__img-blue {
+    padding: 3em 6em 6em;
+    background-image: url("../images/desktop/image-photography.jpg");
+  }
+  .images__subtitle {
+    font-size: 3.2rem;
+  }
+  .images__subtext {
+    font-size: 1.8rem;
+    line-height: 27px;
+  }
+  .testimonials {
+    padding: 12em 2em;
+  }
+  .testimonials__title {
+    letter-spacing: 5px;
+  }
+  .testimonials__text {
+    line-height: 28px;
+    margin: 3em 0;
+  }
+  .testimonials__card {
+    width: 30%;
+  }
+  .testimonials__card:last-child {
+    margin: 3em 0;
+  }
+}
+@media (1100px <= width) {
+  .header__title {
+    font-size: 4.8rem;
+  }
+  .header__arrow {
+    margin-block-start: 8em;
+  }
+  .images__text {
+    line-height: 30px;
+  }
+  .images__img-green {
+    padding: 3em 12em 6em;
+  }
+  .images__img-blue {
+    padding: 3em 12em 6em;
+  }
+  .images__yellow-info {
+    padding: 10em;
+  }
+  .images__pink-info {
+    padding: 10em;
+  }
+  .images__subtext {
+    line-height: 30px;
+  }
+  .testimonials {
+    padding: 15em 2em;
+  }
+  .testimonials__text {
+    line-height: 30px;
+    margin: 3.5em 0;
   }
 }/*# sourceMappingURL=style.css.map */
