--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,21 +12,29 @@ $Barlow: 'Barlow', sans-serif;
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 .wrapper {
     width: 100%;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1400px;
+}
+
+img {
+    display: block;
+    font-style: italic;
 }
 
 .nav {
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     width: 100%;
     position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2em 1em;
+    padding: 2em;
     z-index: 100;
     
         &__links {
@@ -49,6 +57,7 @@ html {
             opacity: 0;
             visibility: hidden;
             transform-origin: right;
+            box-shadow: 5px 5px 10px #2e2e2e2e;
             transition: transform .2s cubic-bezier(0.25, 0.1, 0.12, 1.73), opacity .2s, visibility .2s;
 
                 &--opened {
@@ -69,7 +78,11 @@ html {
                     border-right:20px solid $pureWhite; 
                 }
         }
+        &__logo {
+            text-decoration: none;
+        }
         &__link {
+            position: relative;
             display: block;
             margin: .8em 0;
             text-decoration: none;
@@ -77,7 +90,27 @@ html {
             font-size: 2rem;
             font-family: $Barlow;
             font-weight: 600;
-            
+            z-index: 0;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    bottom: -3px;
+                    left: 0;
+                    border-radius: 30px;
+                    width: 100%;
+                    height: 2px;
+                    transform: scaleX(0);
+                    transform-origin: right;
+                    background-color: $yellowHover;
+                    transition: transform .3s;
+                    z-index: -1;
+                }
+                
+                &:hover::before {
+                    transform: scaleX(1);
+                    transform-origin: left;
+                }
 
                 &:last-child {
                     background-color: $yellowHover;
@@ -93,6 +126,9 @@ html {
                         &:hover {
                             background-color: hsl(51, 82%, 54%);
                         }
+                        &::before {
+                            display: none;
+                        }
                 }
         }
         &__burger-btn {
@@ -105,6 +141,9 @@ html {
                 &--active {
                     opacity: 0.7;
                 }
+                img {
+                    width: 30px;
+                }
         }
 }
 
@@ -114,17 +153,18 @@ html {
 .header {
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 75vh;
-    padding: 2em;
+    padding: 5em;
     background-image: url('../images/mobile/image-header.jpg');
     background-position: center;
     background-size: cover;
     overflow: hidden;
 
     &__title {
-        margin-block-start: 3em;
+    
         text-align: center;
         font-family: $fraunces;
         font-size: 3rem;
@@ -133,9 +173,12 @@ html {
         font-weight: 900;
         color: $pureWhite;
     }
+    a {
+        text-decoration: none;
+        padding: 0 2em;
+    }
     &__arrow {
-        position: absolute;
-        bottom: 8em;
+        margin-block-start: 4em;
     }
 
 }
@@ -144,10 +187,16 @@ html {
 // IMAGES SECTION
 
 .images {
+
+    &__wrapper {
+        max-width: 1600px;
+    }
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr);
     text-align: center;
+    overflow: hidden;
     
 
     .desktop-visible {
@@ -164,6 +213,9 @@ html {
         grid-row: 1 / 2;
     }
     &__yellow-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         grid-column: 1 / 2;
         grid-row: 2 / 3;
         padding: 4em;
@@ -204,9 +256,16 @@ html {
                 height: 7px;
                 border-radius: 30px;
                 z-index: -1;
+                transition: background-color .3s;
             }
             &--yellow::before {
                 background-color: hsla(51, 100%, 49%, 0.271);
+            }
+            &--yellow:hover::before {
+                background-color: $yellowHover;
+            }
+            &--pink:hover::before {
+                background-color: $redHover;
             }
             &--pink::before {
                 background-color: hsl(7, 99%, 70%, 0.271);
@@ -214,34 +273,422 @@ html {
     }
 
     &__pink-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         grid-column: 1 / 2;
         grid-row: 4 / 5;
         padding: 4em;
     }
 
 
-    // &__img-green {
-    //     background-image: url('../images/mobile/image-graphic-design.jpg');
-    //     background-size: cover;
-    //     background-position: center;
-    //     grid-column: 1 / 2;
-    //     grid-row: 5 / 7;
-    // }
+    &__img-green {
+        padding: 2em;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        background-image: url('../images/mobile/image-graphic-design.jpg');
+        background-size: cover;
+        background-position: center;
+        grid-column: 1 / 2;
+        grid-row: 5 / 7;
+    }
+    &__subtitle {
+        font-family: $fraunces;
+        font-size: 2.4rem;
+        color: $cherriesText;
+        font-weight: 900;
+        text-transform: capitalize;
+        margin-block-end: 1em;
+    }
+    &__subtext {
+        margin-block-end: 4em;
+        font-family: $Barlow;
+        font-size: 1.5rem;
+        color: $cherriesText;
+        font-weight: 600;
+        line-height: 25px;
+    }
 
+    &__img-blue {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 2em;
+        background-image: url('../images/mobile/image-photography.jpg');
+        background-size: cover;
+        background-position: center;
+        grid-column: 1 / 2;
+        grid-row: 7 / 9;
+    }
+    &__subtitle, &__subtext {
+        color: $orangeFruitText;
+    }
+
+
+}
+
+// TESTIMONIALS SECTION
+
+
+.testimonials {
+    padding: 6em 2em;
+
+        &__title {
+            text-align: center;
+            font-size: 1.7rem;
+            text-transform: uppercase;
+            font-family: $fraunces;
+            letter-spacing: 3px;
+            color: $lightBlue;
+            font-weight: 700;
+        }
+        &__box {
+            margin-block-start: 5em;
+        }
+        &__card {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 3em;
+            margin: 3em 0;
+            font-family: $Barlow;
+        }
+        &__img {
+            width:70px;
+            border-radius: 50%;
+        }
+        &__text {
+            margin: 2em 0 1.5em;
+            font-size: 1.7rem;
+            line-height: 25px;
+            color: $darkBlue;
+            font-weight: 600;
+        }
+        &__name {
+            display: block;
+            margin-block-end: .5em;
+            font-size: 1.7rem;
+            font-weight: 900;
+            font-family: $fraunces;
+        }
+        &__info-subtitle {
+            font-size: 1.3rem;
+            color: $lightBlue;
+            font-weight: 500;
+        }
 }
 
 
 
-
-
-@media(375px <= width) {
+@media(400px >= height) {
     .header {
-        &__arrow {
-            bottom: 12em;
+        height: 150vh;
+    }
+}
+
+
+@media(576px <= width) {
+    .nav {
+        &__burger-btn {
+            display: none;
         }
+        &__links-desktop {
+            display: flex;
+            align-items: center;
+        }
+        &__links-mobile {
+            display: none;
+        }
+        &__link {
+            margin: 0 1em;
+            color: $pureWhite;
+            font-size: 1.4rem;
+            font-weight: 600;
+            
+
+                &:last-child {
+                    background-color: $pureWhite;
+                    font-size: 1.2rem;
+                    backdrop-filter: blur(5px);
+                    text-shadow: 2px 2px 3px transparent;
+                    transition: background-color .3s, color .3s;
+
+                        &:hover {
+                            background-color: rgba(255, 255, 255, 0.3);
+                            color: $pureWhite;
+                            text-shadow: 2px 2px 3px #2e2e2e2e;
+                        }
+                }
+        }
+        
+    }
+    
+    .header {
+
         &__title {
-            margin-block-start: 4em;
             font-size: 3.5rem;
         }
+        &__arrow {
+            margin-block-start: 6em;
+        }
+
     }
+
+    .images {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+
+        &__title {
+            font-size: 3rem;
+        }
+        &__text {
+            font-size: 1.7rem;
+        }
+        &__link {
+            font-size: 1.5rem;
+        }
+
+        &__subtitle {
+            font-size: 2.8rem;
+        }
+        &__subtext {
+            font-size: 1.7rem;
+        }
+
+        &__img-yellow  {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
+        &__yellow-info {
+            text-align: left;
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+        }
+        &__link {
+            margin: 0;
+        }
+
+        &__img-pink {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
+        &__pink-info {
+            text-align: left;
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+        }
+
+        &__img-green {
+            padding: 3em 2em;
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
+        }
+        &__img-blue {
+            padding: 3em 2em;
+            grid-column: 2 / 3;
+            grid-row: 3 / 4;
+        }
+        &__subtitle {
+            margin-block-start: 2em;
+        }
+        &__subtext {
+            margin: 0;
+        }
+
+    }
+
+    .testimonials {
+        padding: 8em 2em;
+        &__title {
+            font-size: 1.9rem;
+        }
+        &__box {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        &__card {
+            width: 50%;
+
+                &:last-child {
+                    margin: 0;
+                }
+        }
+        &__card-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+    }
+}
+
+@media(700px <= width) {
+    .header {
+        background-image: url('../images/desktop/image-header.jpg');
+
+        
+        &__title {
+            font-size: 3.8rem;
+            letter-spacing: 7px;
+        }
+        &__arrow {
+            margin-block-end: 6em;
+        }
+    }
+}
+
+@media(768px <= width) {
+    .testimonials {
+        padding: 10em 2em;
+        &__title {
+            font-size: 2.1rem;
+        }
+        &__img {
+            width: 80px;
+        }
+        &__text {
+            font-size: 1.8rem;
+        }
+        &__name {
+            font-size: 1.9rem;
+        }
+        &__info-subtitle {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+
+@media(992px <= width) {
+    .nav {
+        padding: 4em;
+
+        &__link {
+            font-size: 1.8rem;
+
+                &:last-child {
+                    font-size: 1.5rem;
+                }
+        }
+        &__logo-img {
+            width: 150px;
+        }
+
+    }
+    .header {
+        height: 100vh;
+
+
+        &__title {
+            font-size: 4.4rem;
+            letter-spacing: 10px;
+        }
+        &__arrow {
+            margin-block-end: 10em;
+        }
+    }
+    .images {
+        .mobile-visible {
+            display: none;
+        }
+        .desktop-visible {
+            display: block;
+        }
+        &__title {
+            font-size: 3.8rem;
+        }
+        &__text {
+            font-size: 1.8rem;
+            line-height: 27px;
+        }
+        &__yellow-info {
+            padding: 6em;
+        }
+        &__pink-info {
+            padding: 6em;
+        }
+        &__link {
+            font-size: 1.8rem;
+        }
+        &__img-green {
+            padding: 3em 6em 6em;
+            background-image: url('../images/desktop/image-graphic-design.jpg');
+        }
+        &__img-blue {
+            padding: 3em 6em 6em;
+            background-image: url('../images/desktop/image-photography.jpg');
+        }
+        &__subtitle {
+            font-size: 3.2rem;
+        }
+        &__subtext {
+            font-size: 1.8rem;
+            line-height: 27px;
+        }
+    }
+
+    .testimonials {
+        padding: 12em 2em;
+        &__title {
+            letter-spacing: 5px;
+        }
+        &__text {
+            line-height: 28px;
+            margin: 3em 0;
+        }
+        &__card {
+            width: 30%;
+
+                &:last-child {
+                    margin: 3em 0;
+                }
+        }
+    }
+}
+
+
+@media (1100px <= width) {
+    .header {
+
+        &__title {
+            font-size: 4.8rem;
+        }
+        &__arrow {
+            margin-block-start: 8em;
+        }
+    
+    }
+
+    .images {
+        &__text {
+            line-height: 30px;
+        }
+        &__img-green {
+            padding: 3em 12em 6em;
+        }
+        &__img-blue {
+            padding: 3em 12em 6em;
+        }
+        &__yellow-info {
+            padding: 10em;
+        }
+        &__pink-info {
+            padding: 10em;
+        }
+        &__subtext {
+            line-height: 30px;
+        }
+    }
+    .testimonials {
+        padding: 15em 2em;
+
+        &__text {
+            line-height: 30px;
+            margin: 3.5em 0;
+        }
+    }
+ 
 }
