--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@ img {
   margin-block-start: 4em;
 }
 
+.desktop-visible {
+  display: none;
+}
+
 .images {
   display: grid;
   grid-template-columns: 1fr;
@@ -171,9 +175,6 @@ img {
 }
 .images__wrapper {
   max-width: 1600px;
-}
-.images .desktop-visible {
-  display: none;
 }
 .images__img {
   width: 100%;
@@ -344,6 +345,64 @@ img {
   font-weight: 500;
 }
 
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.footer {
+  background-color: hsl(166.76, 44.16%, 69.8%);
+  padding: 6em 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Barlow", sans-serif;
+}
+.footer__title {
+  font-size: 3rem;
+  color: hsl(167, 40%, 24%);
+  font-weight: 800;
+}
+.footer__links {
+  margin: 4em 0 10em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+}
+.footer__link {
+  text-decoration: none;
+  color: hsl(167, 40%, 24%);
+  font-size: 1.7rem;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+.footer__link:hover {
+  color: hsl(0, 0%, 100%);
+}
+.footer__social-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3em;
+}
+.footer__social-icon path {
+  transition: fill 0.3s;
+}
+.footer__social-icon:hover path {
+  fill: hsl(0, 0%, 100%);
+}
+
 @media (400px >= height) {
   .header {
     height: 150vh;
@@ -476,6 +535,9 @@ img {
   .header__arrow {
     margin-block-end: 6em;
   }
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 @media (768px <= width) {
   .testimonials {
@@ -496,10 +558,25 @@ img {
   .testimonials__info-subtitle {
     font-size: 1.5rem;
   }
+  .footer__title {
+    font-size: 3.4rem;
+  }
+  .footer__link {
+    font-size: 1.9rem;
+  }
 }
 @media (992px <= width) {
+  .mobile-visible {
+    display: none;
+  }
+  .desktop-visible {
+    display: block;
+  }
   .nav {
     padding: 4em;
+  }
+  .nav__links-desktop {
+    gap: 2em;
   }
   .nav__link {
     font-size: 1.8rem;
@@ -519,12 +596,6 @@ img {
   }
   .header__arrow {
     margin-block-end: 10em;
-  }
-  .images .mobile-visible {
-    display: none;
-  }
-  .images .desktop-visible {
-    display: block;
   }
   .images__title {
     font-size: 3.8rem;
@@ -572,6 +643,15 @@ img {
   }
   .testimonials__card:last-child {
     margin: 3em 0;
+  }
+  .footer {
+    padding: 7em 2em;
+  }
+  .footer__title {
+    font-size: 3.8rem;
+  }
+  .footer__link {
+    font-size: 2.1rem;
   }
 }
 @media (1100px <= width) {
